# simple-max31865-rs

./: .gitignore  APACHE-LICENSE  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: ice_bath_test.rs
src/: lib.rs  temp_conversion.rs
tests/: 100_ohm_test.rs
