[package]
name = "simple_max31865"
version = "1.0.0"
authors = ["Rudi Horn <dyn-git@rudi-horn.de>", "Emeric Martineau <11473190+emeric-martineau@users.noreply.github.com>"]
keywords = ["embedded-hal-v1", "rtd-sensor", "max31865"]
categories = ["embedded", "no-std", "hardware-support"]
description = "Simplified driver for the MAX31865 RTD to Digital converter (Raspberry Pi focus)"
documentation = "https://github.com/emeric-martineau/rs-max31865"
repository = "https://github.com/emeric-martineau/rs-max31865.git"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
rppal = { version = "0.17", features = ["embedded-hal"] }  # Enables embedded-hal v1 traits for SpiBus, OutputPin, etc.
embedded-hal = "1.0"  # Ensure v1

[target.thumbv7m-none-eabi.dev-dependencies]
cortex-m-semihosting = "0.3.7"
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
panic-halt = "0.2.0"
stm32f1xx-hal = { version = "0.7.0", features = ["stm32f103"] }
embedded-graphics = "0.6.2"
ssd1306 = "0.5.1"

#[target.'cfg(unix)'.dev-dependencies]
#linux-embedded-hal = "0.3.0"

[profile.test]
lto = "thin"        # Enables link-time optimization: Strips unused symbols (e.g., test harness bloat) like in your main binary
panic = "abort"     # Changes panic handling to abort (no unwind deps from glibc 2.39+)
codegen-units = 1   # Single codegen unit: Better dead-code elimination, fewer resolved symbols
debug = false       # Skips full debuginfo: Reduces symbol pulls (add back if you need gdb)

[[test]]
name = "test_100ohm"
path = "tests/100_ohm_test.rs"
test = true

[lib]
path = "src/lib.rs"

[features]
doc = []