[package]
name = "simple_max31865"
version = "1.0.0"
authors = ["Alan Robertson <alanr@unix.sh>"]
keywords = ["embedded-hal-v1", "rtd-sensor", "max31865"]
categories = ["embedded", "no-std", "hardware-support"]
description = "Easy-to-use driver for the MAX31865 RTD to Digital converter (Raspberry Pi focus)"
documentation = "https://github.com/emeric-martineau/rs-max31865"
repository = "https://github.com/Alan-R/simple-max31865-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
rppal = { version = "0.17", features = ["embedded-hal"] }  # Enables embedded-hal v1 traits for SpiBus, OutputPin, etc.
embedded-hal = "1.0"  # Ensure v1

[dev-dependencies]
clap = { version = "4.0", features = ["derive"] }  # For CLI args in examples

[[example]]
name = "ice_bath_test"
path = "examples/ice_bath_test.rs"
# required-features = ["doc"]  # If you want to tie it to the doc feature


[profile.test]
lto = "thin"        # Enables link-time optimization: Strips unused symbols (e.g., test harness bloat) like in your main binary
panic = "abort"     # Changes panic handling to abort (no unwind deps from glibc 2.39+)
codegen-units = 1   # Single codegen unit: Better dead-code elimination, fewer resolved symbols
debug = false       # Skips full debuginfo: Reduces symbol pulls (add back if you need gdb)

[[test]]
name = "test_100ohm"
path = "tests/100_ohm_test.rs"
test = true

[lib]
path = "src/lib.rs"

[features]
doc = []