[package]
name = "simple-max31865"
version = "1.0.0"  # Bumped for initial publish (stable API, but first release)
authors = ["Alan Robertson <alanr@unix.sh>"]
keywords = ["embedded-hal-v1", "rtd-sensor", "max31865"]
categories = ["embedded", "hardware-support"]
description = "Easy-to-use driver for the MAX31865 RTD to Digital converter (Raspberry Pi focus)"
documentation = "https://docs.rs/simple-max31865"  # Standard for crates.io; will auto-generate on publish
repository = "https://github.com/Alan-R/simple-max31865-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
rppal = { version = "0.17", features = ["embedded-hal"] }  # Enables embedded-hal v1 traits for SpiBus, OutputPin, etc.
embedded-hal = "1.0"  # Ensure v1

[dev-dependencies]
serial_test = "3.2.0"  # For serial execution of hardware tests (avoids SPI/GPIO conflicts)

[[example]]
name = "ice_bath_test"
path = "examples/ice_bath_test.rs"

[profile.test]
lto = "thin"        # Enables link-time optimization: Strips unused symbols (e.g., test harness bloat) like in your main binary
panic = "abort"     # Changes panic handling to abort (no unwind deps from glibc 2.39+)
codegen-units = 1   # Single codegen unit: Better dead-code elimination, fewer resolved symbols
debug = false       # Skips full debuginfo: Reduces symbol pulls (add back if you need gdb)

[[test]]
name = "test_100ohm"
path = "tests/100_ohm_test.rs"
test = true

[lib]
path = "src/lib.rs"

[features]
# Removed empty 'doc' feature; add back if needed for conditional compilation